# gemm_lib_compare

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
CUDA/: CMakeLists.txt  gemm.cu  main_CUDA.cu
OpenACC/: CMakeLists.txt  gemm.cpp  main_OpenACC.cpp
OpenACC/test/: CMakeLists.txt  gemm.cpp
OpenMP/: CMakeLists.txt  gemm.cpp  main_OpenMP.cpp
OpenMP/test/: CMakeLists.txt
include/: gemm.hpp  gemm_CUDA.hpp
include/reference/: gemm.hpp
reference/: CMakeLists.txt  gemm.cpp  main_reference.cpp
reference/test/: CMakeLists.txt  gemm.cpp
test/: CMakeLists.txt
test/OpenACC/: gemm.cpp
test/OpenMP/: gemm.cpp
test/reference/: gemm.cpp
